--- a/.gitignore
+++ b/.gitignore
@@ -3,23 +3,19 @@
 # dependencies
 /node_modules
 /.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+.pnp.js
 
 # testing
 /coverage
 
+.gitpod.yml
 # next.js
 /.next/
 /out/
 
 # production
 /build
-
+.env
 # misc
 .DS_Store
 *.pem
@@ -28,13 +24,19 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# local env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
-next-env.d.ts
+
+#packages
+yarn.lock
