--- a/package.json
+++ b/package.json
@@ -9,18 +9,47 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@dedust/sdk": "^0.8.7",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "@orbs-network/ton-access": "^2.2.2",
+    "@ston-fi/sdk": "^0.4.1",
+    "@tanstack/react-query": "^4.24.4",
+    "@ton/core": "^0.56.3",
+    "@ton/crypto": "^3.2.0",
+    "@ton/ton": "^13.11.1",
+    "@tonconnect/ui-react": "^2.0.0-beta.2",
+    "@twa-dev/sdk": "^6.4.2",
+    "autoprefixer": "^10.4.17",
+    "buffer": "^6.0.3",
+    "ethers": "6.10.0",
+    "framer-motion": "^6",
+    "is-mobile": "^3.1.1",
+    "next": "^14.0.4",
+    "qs": "^6.11.2",
+    "react": "^18.2.0",
+    "react-cryptocoins": "^1.0.11",
+    "react-dom": "^18.2.0",
+    "styled-components": "^5.3.6",
+    "tailwindcss": "^3.4.1",
+    "ton": "13.3.0",
+    "ton-core": "^0.46.0",
+    "ton-crypto": "^3.2.0",
+    "tonweb": "^0.0.66",
+    "use-local-storage": "^2.3.6",
+    "vite-plugin-node-polyfills": "^0.7.0",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3"
+    "@types/minimalistic-assert": "^1.0.1",
+    "@types/node": "17.0.21",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "@types/styled-components": "^5.1.26",
+    "eslint": "8.11.0",
+    "eslint-config-next": "12.1.0",
+    "typescript": "4.6.2"
   }
 }
